# GestionaleTranviario

./: .gitignore  CMakeLists.txt  GestoreOrari.cpp  GestoreOrari.h  Grafica.cpp  Grafica.h  LeggiLinea.cpp  LeggiLinea.h  LeggiOrari.cpp  LeggiOrari.h  LineaFerroviaria.cpp  LineaFerroviaria.h  README.md  Semaforo.cpp  Semaforo.h  Stazione.cpp  Stazione.h  StazionePrincipale.cpp  StazionePrincipale.h  StazioneSecondaria.cpp  StazioneSecondaria.h  Treno.cpp  Treno.h  line_description.txt  line_description1.txt  main.cpp  output_1.txt  output_2.txt  readme.txt  timetables.txt  timetables_1.txt  timetables_2.txt  timetables_3.txt  timetables_4.txt
